--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<meta charset="utf-8">
+		<meta charSet="utf-8">
 		<link rel="shortcut icon" href="/public/favicon.ico">
 		<!-- <link rel="stylesheet" href="style.css"> -->
 		<title>Hello, Node School App!</title>
